# Morgaine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
.bin/docker/morgaine/: Dockerfile
.bin/docker/scripts/: Dockerfile
.bin/hooks/: pre-commit  pre-push
.bin/scripts/: init.sh
.bin/scripts/pg/: MORG_PERMS.sh  MORG_TABLES.sh
.bin/scripts/pre-init/: MORG_READS.sh
.github/workflows/: standard.yml
morg_commons/: Cargo.toml
morg_commons/__tests__/data/: mock_config.yml
morg_commons/config/: default.yml
morg_commons/src/: config.rs  lib.rs  menv.rs
morg_commons/src/config/: mod.rs  settings.rs
morg_commons/src/encrypt/: hasher.rs  mod.rs  random.rs
morg_commons/src/logg/: files.rs  manager.rs  mod.rs
morg_commons/src/menv/: mod.rs
morg_commons/src/utils/: file_manager.rs
morg_commons/tests/: config.rs  encrypt.rs  logger.rs
morg_env/: Cargo.toml
morg_env/src/: lib.rs
morg_env/src/secrets/: mod.rs
morg_log/: Cargo.toml
morg_log/src/: lib.rs  manager.rs
morg_storage/: Cargo.toml
morg_storage/src/: drivers.rs  lib.rs  schema.rs
morg_storage/src/models/: mod.rs
morgaine/: Cargo.toml
