[package]
name = "morg_commons"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.19"
colored = "2.0.0"
log = { version = "0.4.14", features = ["std"] }
