[package]
name = "morg_commons"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = "0.7.0"
ring = "0.16.20"
dotenv = "0.15.0"
chrono = "0.4.19"
colored = "2.0.0"
serde_yaml = "0.8"
aes-gcm-siv = "0.10.1"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4.14", features = ["std"] }

[dev-dependencies]
futures = "0.3.15"
async-std = { version = "1.9.0", features = ["attributes"] }
asynv = { git = "https://github.com/whoastonic/asynv", branch = "main" }