[package]
name = "morg_commons"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
scrypt = "0.7"
ring = "0.16.20"
dotenv = "0.15.0"
chrono = "0.4.19"
colored = "2.0.0"
directories = "3.0.2"
config = "0.11.0"
aes-gcm-siv = "0.10.1"
log = { version = "0.4.14", features = ["std"] }
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
futures = "0.3.15"
async-std = { version = "1.9.0", features = ["attributes"] }