[package]
name = "morg_log"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
morg_env = { path = "../morg_env" }
log = { version = "0.4.14", features = ["std"] }
